--- a/.gitignore
+++ b/.gitignore
@@ -20,13 +20,14 @@
 *.rar
 
 # Generated folders
-out/
-log/
-sdis2/
+out
+log
+sdis2
+/dbs
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 .vscode
 .idea
-*.iml
+/*.iml
